--- a/page.html
+++ b/page.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>Мой первый блог</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="/views/style.css">
 </head>
 
 <body>
@@ -42,7 +42,7 @@
 		</div>
 		<footer class="container-fluid">
 			<p> Мой первый блог
-				<br> Copyright©2016
+				<br> Copyright © 2016
 			</p>
 		</footer>
 
